#3 Fix: 대시보트 트렌드 - 순위 방향(rankChangeDirection) 필드 반영